src/test/deca/context/valid/created/ifthenelse/middle_cond.deca
// Description :
//  If else avec OR boolean arith
// Resultats:
//  OK
{
    if (true || false || true) {
        println("true");
    } else {
        println("false");
    }
}
