src/test/deca/context/invalid/created/wrong_type_condition_while_INT.deca
{
    while (56) {
        println("true");
    } else {
        println("false");
    }
}